<resources>
    <string name="app_name" translatable="false">FitnessKit</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="lesson">Lessons</string>
    <string name="orders">Orders</string>
    <string name="add">Add</string>
    <string name="chat">Chat</string>
    <string name="more">More</string>
    <string name="couch_name">Couch name</string>
    <string name="lesson_location">Lesson location</string>
    <string name="coach_is_not_yet_appointed">Not yet appointed</string>
    <string name="schedule">Schedule</string>
    <string name="retry">Retry</string>
    <string name="duration">%1$s h. %2$s min.</string>
    <string name="duration_zero_hours">%1$s min.</string>
</resources>